--- a/electron/index.html
+++ b/electron/index.html
@@ -6,7 +6,8 @@
 
   </head>
   <body>
-    <div id="editor"></div>
+    <div id="editor">
+    </div>
     <script type="module" src="/src/renderer.ts"></script>
   </body>
 </html>
