styling, wrap text, clear pane

--- a/electron/index.html
+++ b/electron/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="editor">
+      <p id="paragraph"></p>
     </div>
     <script type="module" src="/src/renderer.ts"></script>
   </body>
