change title, add status bar, style changes, cursor block

--- a/electron/index.html
+++ b/electron/index.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>Text Editor</title>
 
   </head>
   <body>
-    <div id="editor">
+    <div id="editor" class="outline">
       <p id="paragraph"></p>
     </div>
+    <div id="status-line" class="outline">Normal</div>
     <script type="module" src="/src/renderer.ts"></script>
   </body>
 </html>
