grid layout, add some unicode characters

--- a/electron/index.html
+++ b/electron/index.html
@@ -6,10 +6,17 @@
 
   </head>
   <body>
-    <div id="editor" class="outline">
+    <div id="tree">
+      <ul>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+      </ul>
+    </div>
+    <div id="editor">
       <p id="paragraph"></p>
     </div>
-    <div id="status-line" class="outline">Normal</div>
+    <div id="status-line">Normal</div>
     <script type="module" src="/src/renderer.ts"></script>
   </body>
 </html>
