--- a/electron/index.html
+++ b/electron/index.html
@@ -13,9 +13,7 @@
         <li>Three</li>
       </ul>
     </div>
-    <div id="editor">
-      <p id="paragraph"></p>
-    </div>
+    <div id="editor"></div>
     <div id="status-line">Normal</div>
     <script type="module" src="/src/renderer.ts"></script>
   </body>
